# stac-fastapi-opensearx

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  era5-pds.json  ifremer_config.json  pyproject.toml  setup.cfg  static_server.py
daymet/annual/hi/: collection.json  item.json
daymet/annual/na/: collection.json  item.json
daymet/annual/pr/: collection.json  item.json
daymet/daily/hi/: collection.json  item.json
daymet/daily/na/: collection.json  item.json
daymet/daily/pr/: collection.json  item.json
daymet/monthly/hi/: collection.json  item.json
daymet/monthly/na/: collection.json  item.json
daymet/monthly/pr/: collection.json  item.json
notebooks/: opensearx-server.ipynb  webapi-server.ipynb
opensearx/: __main__.py  app.py  core.py  json.py  pagination.py  search.py  types.py  webapi.py
opensearx/tests/: test_webapi.py  test_webapi_dialects.py
opensearx/webapi/: atom.py  core.py  dialects.py
stac_fastapi/opensearx/: __init__.py  pagination.py
stac_fastapi/opensearx/elasticsearch/: __main__.py  app.py  connection.py  core.py  dialects.py  pagination.py
stac_fastapi/opensearx/tests/: test_webapi_dialects.py
stac_fastapi/opensearx/webapi/: __main__.py
